deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xiaoya
  labels:
    app: xiaoya
spec:
  selector:
    matchLabels:
      app: xiaoya
  template:
    metadata:
      labels:
        app: xiaoya
    spec:
      containers:
      - name: xiaoya
        image: docker.io/xiaoyaliu/alist:latest
        volumeMounts:
        - name: data
          mountPath: /data
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
      volumes:
        - name: config-volume
          configMap:
            defaultMode: 511
            name: config-app
        - name: data
          emptyDir:
            sizeLimit: 500Mi
