service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xiaoya
spec:
  type: ClusterIP
  ports:
    - name: "xiaoya"
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: xiaoya
