ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xiaoya
  annotations:
    dev.okteto.com/generate-host: "true"
    dev.okteto.com/endpoints: https://xiaoya-${OKTETO_NAMESPACE}.${OKTETO_DOMAIN}
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: xiaoya
                port:
                  number: 80
            path: /
            pathType: Prefix
